# ahc

./: .gitignore  memo.md
ahc015/: Cargo.toml
ahc020/: out
ahc020/src/: main.rs  main_after_contest.rs  main_contest.rs
ahc021/: out
ahc021/src/: main.rs  main_.rs
ahc022/: note.md
ahc022/src/: main.rs  main_around_temp_pattern.rs  main_around_temp_pattern_multitest.rs  main_best.rs  main_best2.rs  main_calc_S_big_meaure_num.rs  main_gomi.rs  main_gomi2.rs  main_gomi3.rs  main_random_temp.rs  main_random_temp_multitest.rs  main_single_point_temp.rs  main_single_point_temp_multitest.rs
ahc023/: note.md
ahc023/src/: main.rs  main_19M.rs  main_22.6M.rs  main_27.4M_local_good.rs  main_27.6M.rs  main_27M_local_good.rs  main_30M.rs  main_33.5M.rs  main_36.2M.rs  main_36M.rs  main_38M.rs  main_botsu.rs  main_botsu2.rs
ahc024/: Cargo.toml  run.sh
ahc024/src/: main.rs
ahc025/: Cargo.toml
ahc025/src/: main.rs
ahc026/src/: main.rs
ahc027/: note.md
ahc027/src/: main.rs  main_climbing.rs  main_dijkstra.rs  main_dirty_max_greedy.rs  (+1 more)
ahc030/: Cargo.toml  a.py  run.sh  vis.html  vis2.html
ahc031/: Cargo.toml  run.sh
codeweekend/: Cargo.toml  run.sh
icfpc2024/: 3d_problem  Cargo.toml  get_3d.py  get_efficiency.py  get_lambdaman.py  get_problem.py  get_spaceship.py  hello4.py  lambdaman_problem  launguage_test  note.md  post_solve.py  run.sh  spaceship_problem
masters-qual/: Cargo.toml  group.html  run.sh  vis.html
yuki6/: Cargo.toml  in2  run.sh
yuki6/src/: main.rs  (+5 more)
yuki8/: memo.md  run.sh
yuki9/: Cargo.toml  run.sh  tuna.sh
yuki9/src/: lib.rs
(+13 files in other folders)
