[package]
name = "tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_chacha = "=0.2.2"
rand_distr = "=0.2.2"
itertools = "=0.11.0"
proconio = { version = "=0.3.6", features = ["derive"] }
svg = "0.9.0"

[features]
local = []
seed = []

[profile.dev]
opt-level = 3